# Rhdf5lib

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  NAMESPACE  NEWS  README.md  cleanup  cleanup.win  configure  configure.ac  configure.ucrt  configure.win
.github/workflows/: mac-conda.yml  main.yml  test_hdf5.yml  test_rhdf5.yml
R/: Rhdf5lib.R  zzz.R  zzz.R.in
inst/tinytest/: test_library_version.R  test_link_flags.R
man/: Rhdf5lib.Rd  dot-curlStatus.Rd  dot-getDynamicLinks.Rd  dot-getSzipLoc.Rd  getHdf5Version.Rd  pkgconfig.Rd
src/: Makevars.in  Makevars.ucrt  Makevars.win  Rhdf5lib.c
tests/: tinytest.R
tools/: copy_hdf5_files.R  winlibs.R
vignettes/: README.md  Rhdf5lib.Rmd  build-win.sh  downloadHDF5.R  downloadHDF5.Rmd
